k8s/manifests/8-nginx-controller/1-deployment.yaml
---
apiVersion: v1
kind: Deployment
metadata:
  name: myapp
  namespace: external-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp
          image: gehadgkamel/end-to-end-todo-app
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 100m
