k8s/manifests/8-nginx-controller/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: external-nginx
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp
