k8s/manifests/8-nginx-controller/3-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: external-nginx
spec:
  ingressClassName: external-nginx
  rules:
    - host: myapp.external-nginx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 8080
